# shafaf

./: .gitignore  .prompt.yml  ANDROID_SETUP.md  ENV_CONFIG.md  README.md  UPDATER_SETUP.md  ai.html  index.html  license-generator.html  llms.txt  package-lock.json  package.json  server.js
.github/: RELEASE_GUIDE.md  dependabot.yml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: currencies.sql  customers.sql  surreal_schema.surql
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  license.rs  server.rs  surrealdb.rs
src/components/: Account.tsx  AiReport.tsx  CoaManagement.tsx  CompanySettings.tsx  Currency.tsx  Customer.tsx  DatabaseConfig.tsx  Deduction.tsx  Employee.tsx  Expense.tsx  Footer.tsx  JournalEntries.tsx  License.tsx  Login.tsx  PersianDatePicker.tsx  Product.tsx  ProfileEdit.tsx  Purchase.tsx  PurchaseInvoice.tsx  PurchasePayment.tsx  Report.tsx  Salary.tsx  SaleInvoice.tsx  Sales.tsx  SalesPayment.tsx  Supplier.tsx  Unit.tsx  UserManagement.tsx
src/utils/: account.ts  company.ts  currency.ts  customer.ts  dashboard.ts  date.ts  db.ts  deduction.ts  employee.ts  expense.ts  fonts.ts  journal.ts  license.ts  product.ts  purchase.ts  purchase_payment.ts  puter.ts  puterReport.ts  report.ts  reportExport.ts  reportSchema.ts  salary.ts  sync.ts  (+6 more)
wiki/: Android-Setup.md  Building-and-Release.md  Configuration.md  Development.md  Features.md  Getting-Started.md  Home.md  Installation.md  License.md  README.md  Troubleshooting.md
(+2 files in other folders)
