[package]
name = "tauri-app"
version = "6.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-fs = { version = "2", features = [] }
tauri-plugin-keychain = "2.0"
tauri-plugin-updater = { version = "2", features = [] }
keyring = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
surrealdb = { version = "2.4", features = ["kv-surrealkv", "protocol-ws", "protocol-http"] }
anyhow = "1.0"
bcrypt = "0.15"
dotenv = "0.15"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
url = "2.5"

